--- a/Resources/config/doctrine/Document.orm.yml
+++ b/Resources/config/doctrine/Document.orm.yml
@@ -1,4 +1,4 @@
-Mesd\File\DocumentBundle\Entity\Document:
+Mesd\FileDocumentBundle\Entity\Document:
     type: entity
     table: document
     fields:
