--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "symfony-bundle",
     "description": "File Document bundle",
     "autoload": {
-        "psr-0": { "Mesd\\File\\DocumentBundle": "" }
+        "psr-0": { "Mesd\\FileDocumentBundle": "" }
     },
-    "target-dir": "Mesd/File/DocumentBundle"
+    "target-dir": "Mesd/FileDocumentBundle"
 }
