--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,5 +7,5 @@ services:
 #        class: %mesd_doctrine_extensions_table_prefixer.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
     document:
-        class: Mesd\File\DocumentBundle\Entity\Document
+        class: Mesd\FileDocumentBundle\Entity\Document
         arguments: ["%kernel.root_dir%/../", "%dirs%"]
